--- a/resources/views/assets.antlers.html
+++ b/resources/views/assets.antlers.html
@@ -1,1 +1,1 @@
-<link rel="stylesheet" href="{{ mix src='vendor/quick-brown-fox/css/quick-brown-fox.css' }}">
+<link rel="stylesheet" href="{{ mix src='css/quick-brown-fox.css' in="vendor/quick-brown-fox" }}">
